# Projeto-Sementes

Logica_De_Programacao_Java/Desafio_1/: README.MD
Logica_De_Programacao_Java/Desafio_10/: README.MD
Logica_De_Programacao_Java/Desafio_11/: README.MD
Logica_De_Programacao_Java/Desafio_12/: README.MD
Logica_De_Programacao_Java/Desafio_13/: README.MD
Logica_De_Programacao_Java/Desafio_14/: README.MD
Logica_De_Programacao_Java/Desafio_2/: README.MD
Logica_De_Programacao_Java/Desafio_3/: README.md
Logica_De_Programacao_Java/Desafio_4/: README.MD
Logica_De_Programacao_Java/Desafio_5/: README.MD
Logica_De_Programacao_Java/Desafio_6/: README.MD
Logica_De_Programacao_Java/Desafio_7/: README.MD
Logica_De_Programacao_Java/Desafio_8/: README.MD
Logica_De_Programacao_Java/Desafio_9/: README.MD
Logica_de_Programacao/Desafio_1/: README.md
Logica_de_Programacao/Desafio_10/: pyproject.toml
Logica_de_Programacao/Desafio_12/: README.md  pyproject.toml
Logica_de_Programacao/Desafio_14/: pyproject.toml
Logica_de_Programacao/Desafio_2/: README.md
Logica_de_Programacao/Desafio_5/: README.md  pyproject.toml
Logica_de_Programacao/Desafio_7/: README.md
Logica_de_Programacao/Desafio_8/: pyproject.toml
Logica_de_Programacao_Python/Desafio_1/: README.md
Logica_de_Programacao_Python/Desafio_10/: README.md
Programacao_Orientada_Objetos_Python/: produtos.json
Programacao_Orientada_Objetos_Python/Desafio_1/: README.md  pyproject.toml
Programacao_Orientada_Objetos_Python/Desafio_1/desafio_1/: main.py  mercado.py  produto.py
(+59 files in other folders)
